<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_illegal"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="26dp"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_Illegal"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <Button
                android:id="@+id/button_troll"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="26dp"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_Troll"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintEnd_toStartOf="@+id/button_personal_attack"
                app:layout_constraintStart_toEndOf="@+id/button_illegal"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button_personal_attack"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_PersonalAttack"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button_pron"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="32dp"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_Pron"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_illegal" />

            <Button
                android:id="@+id/button_copyright_violations"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_CopyrightViolations"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_personal_attack" />

            <Button
                android:id="@+id/button_scam_gambling"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="32dp"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_ScamGambling"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_pron" />

            <Button
                android:id="@+id/button_other"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_Other"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_copyright_violations" />

            <Button
                android:id="@+id/button_bloody_violence"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="32dp"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_BloodyViolence"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintEnd_toStartOf="@+id/button_copyright_violations"
                app:layout_constraintStart_toEndOf="@+id/button_pron"
                app:layout_constraintTop_toBottomOf="@+id/button_troll" />

            <Button
                android:id="@+id/button_place_ad"
                android:layout_width="@dimen/dp_88"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="32dp"
                android:background="@drawable/report_button"
                android:onClick="onClick"
                android:text="@string/report_PlaceAd"
                android:textAppearance="@style/HustHoleTypography.Button3"
                android:textColor="@color/GrayScale_100"
                app:layout_constraintEnd_toStartOf="@+id/button_other"
                app:layout_constraintStart_toEndOf="@+id/button_scam_gambling"
                app:layout_constraintTop_toBottomOf="@+id/button_bloody_violence" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:text="举报"
                android:textColor="@color/GrayScale_0"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_include" />

            <TextView
                android:id="@+id/tv_report_holeid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/HH_BandColor_3"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="的"
                android:textColor="@color/GrayScale_0"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_report_holeid"
                app:layout_constraintStart_toEndOf="@+id/tv_report_holeid"
                app:layout_constraintTop_toTopOf="@+id/tv_report_holeid" />

            <TextView
                android:id="@+id/tv_alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/HH_BandColor_3"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="涉及:"
                android:textColor="@color/GrayScale_0"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_alias"
                app:layout_constraintStart_toEndOf="@+id/tv_alias"
                app:layout_constraintTop_toTopOf="@+id/tv_alias" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="29dp"
                android:onClick="onClick"
                android:text="举报描述（选填）"
                android:textColor="@color/GrayScale_0"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_scam_gambling" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_include"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_52"
                android:background="@color/HH_BandColor_1"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_titlebargreen_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="加载中..."
                    android:textAppearance="@style/HustHoleTypography.Headline1.Bold"
                    android:textColor="@color/GrayScale_100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/titlebargreen_AVLoadingIndicatorView"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_titlebargreen_back"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_52"
                    android:layout_centerInParent="true"
                    android:background="@drawable/back_green"
                    android:onClick="onClick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0">

                    <ImageView
                        android:id="@+id/iv_titlebargreen_back"
                        android:layout_width="10dp"
                        android:layout_height="18dp"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/triangle_4" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/titlebargreen_AVLoadingIndicatorView"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    app:indicatorName="BallClipRotateIndicator"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cl_titlebargreen_back"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_report"
                android:layout_width="@dimen/dp_327"
                android:layout_height="@dimen/dp_226"
                android:layout_marginTop="22dp"
                android:background="@drawable/standard_corner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/et_report"
                    android:layout_width="@dimen/dp_287"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:background="@null"
                    android:gravity="top|left"
                    android:hint="请详细描述你所遇到的问题"
                    android:maxHeight="@dimen/dp_194"
                    android:maxLength="1037"
                    android:textColor="@color/GrayScale_0"
                    android:textColorHint="@color/GrayScale_70"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/compose_btn_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_report"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>